--- a/bot/admin/web/src/app/configuration/bot/bot-configurations.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configurations.component.html
@@ -19,21 +19,21 @@
     <div style="display: flex;">
       <span>Bot Configurations</span>
       <nb-actions size="small" style="cursor: pointer;">
-        <nb-action class="control-item" nbTooltip="Refresh" (click)="refresh()">
+        <nb-action *ngIf="state.currentApplication" class="control-item" nbTooltip="Refresh" (click)="refresh()">
           <i class="material-icons tock-toolbar-menu">refresh</i>
         </nb-action>
 
         <nb-action class="control-item"
                    nbTooltip="Create a new Configuration"
                    (click)="prepareCreate()"
-                   *ngIf="!newApplicationConfiguration">
+                   *ngIf="!newApplicationConfiguration && state.currentApplication">
           <i class="material-icons tock-toolbar-menu" style="color: #3366ff;">add_box</i>
         </nb-action>
 
         <nb-action class="control-item"
                    nbTooltip="{{ displayTestConfigurations ? 'Hide test configurations' : 'Display test configurations'}}"
                    (click)="displayTestConfigurations = !displayTestConfigurations"
-                   *ngIf="!newApplicationConfiguration">
+                   *ngIf="!newApplicationConfiguration && state.currentApplication">
           <i *ngIf="!displayTestConfigurations" class="material-icons tock-toolbar-menu">visibility</i>
           <i *ngIf="displayTestConfigurations" class="material-icons tock-toolbar-menu">visibility_off</i>
         </nb-action>
@@ -61,7 +61,7 @@
               {{a.name}}
               <div *ngFor="let conf of a.configurations">
                 <img *ngIf="!conf.connectorType.isRest()"
-                  src="{{conf.connectorType.iconUrl()}}"
+                     src="{{conf.connectorType.iconUrl()}}"
                      class="connector"
                      [matTooltip]="conf.connectorType.id"/>
               </div>
