#568 fixes header glitch
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application/application.component.css
+++ b/nlp/admin/web/src/app/applications/application/application.component.css
@@ -37,3 +37,16 @@
 .engine-type {
   margin-left: 20px;
 }
+
+.application-name {
+  margin-right: 10px;
+}
+
+.save {
+  color: #1452d0;
+  cursor: pointer;
+}
+
+.cancel {
+  cursor: pointer;
+}
