--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright (C) 2017/2019 VSCT
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <div class="header-container">
   <div class="logo-containter" style="    display: contents;">
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
@@ -15,8 +31,8 @@
 
   <nb-select status="primary"
              *ngIf="state.currentApplication"
-             (selectedChange)="changeApplication()"
-             [(ngModel)]="selectedApplication">
+             (selectedChange)="changeApplication($event)"
+             [ngModel]="state.currentApplication.name">
     <nb-option *ngFor="let app of state.applications"
                [value]="app.name">{{ app.name }}
     </nb-option>
@@ -24,8 +40,8 @@
 
   <nb-select status="primary"
              *ngIf="state.currentApplication"
-             (selectedChange)="changeLocale()"
-             [(ngModel)]="selectedLocale"
+             (selectedChange)="changeLocale($event)"
+             [ngModel]="state.currentLocale"
              style="margin-left: 10px;">
     <nb-option *ngFor="let l of state.currentApplication.supportedLocales"
                [value]="l">{{ state.localeName(l) }}</nb-option>
