--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -27,14 +27,15 @@
         <button nbButton outline status="primary" size="small" (click)="search()">GO</button>
         <br>
         <br>
-        <div style="display: inline-flex;">
+        <div class="search-box">
           <div class="search-criterion">
             <nb-select placeholder="Intent" status="primary"
                        [(ngModel)]="filter.intentId"
                        (selectedChange)="changeIntent()"
                        style="width: 12rem;">
               <nb-option value="-1">All</nb-option>
-              <nb-option-group *ngFor="let category of state.currentIntentsCategories | async" [title]="category.category">
+              <nb-option-group *ngFor="let category of state.currentIntentsCategories | async"
+                               [title]="category.category">
                 <nb-option *ngFor="let intent of category.intents" [value]="intent._id">
                   {{intent.intentLabel()}}
                 </nb-option>
@@ -73,13 +74,11 @@
               <nb-option value="review">To review</nb-option>
             </nb-select>
           </div>
-          <mat-form-field class="search-criterion">
-            <input matInput [matDatepicker]="after" status="primary" placeholder="Modified after"
-                   [(ngModel)]="filter.modifiedAfter"
-                   (dateChange)="search()">
-            <mat-datepicker-toggle matSuffix [for]="after"></mat-datepicker-toggle>
-            <mat-datepicker #after (selectedChanged)="search()"></mat-datepicker>
-          </mat-form-field>
+          <div class="search-criterion">
+          <input nbInput (keyup.enter)="search()" placeholder="Modified after" [(ngModel)]="filter.modifiedAfter"
+                 [nbDatepicker]="after" (ngModelChange)="search()">
+          <nb-datepicker #after (dateChange)="search()"></nb-datepicker>
+          </div>
         </div>
       </nb-card-body>
       <nb-card-footer *ngIf="state.hasRole(UserRole.admin)">
