#568 fixes highlight regression
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -31,6 +31,7 @@
       </nb-actions>
     </div>
     <div *ngIf="tokens && !readOnly"
+         #tokensContainer
          class="tokens"
          (mouseup)="select()" (touchend)="select()"><span *ngFor="let t of tokens"
                                                           [style.font-size]="fontSize"
