tock-admin : fix logo on default theme
Signed-off-by: Erwan LE BESCOND <elebescond@gmail.com>

--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -19,8 +19,10 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <img style="width: 45px;" src="/assets/images/Logo_Tock_White.svg"/>
-    <div class="logo" (click)="goToHome()">Tock Studio</div>
+    <div class="logo" (click)="goToHome()">
+      <img class="logo-img" src="/assets/images/logo-black.svg"/>
+      Tock Studio
+    </div>
     <i class="material-icons small">wb_sunny</i>
     <mat-slide-toggle class="choice" [checked]="isDark" (change)="switchTheme()" color="primary"></mat-slide-toggle>
     <i class="material-icons small">brightness_2</i>
