--- a/bot/admin/web/src/app/theme/styles/themes.scss
+++ b/bot/admin/web/src/app/theme/styles/themes.scss
@@ -17,6 +17,8 @@ $nb-themes: nb-register-theme((
   card-header-with-select-padding-top: 0.5rem,
   card-header-with-select-padding-bottom: 0.5rem,
 
+  img-revert: invert(0%),
+
   select-min-width: 6rem,
 
   slide-out-background: #f7f9fc,
@@ -37,6 +39,8 @@ $nb-themes: nb-register-theme((
   card-margin-bottom: 1.875rem,
   card-header-with-select-padding-top: 0.5rem,
   card-header-with-select-padding-bottom: 0.5rem,
+
+  img-revert: invert(0%),
 
   select-min-width: 6rem,
 
@@ -59,6 +63,8 @@ $nb-themes: nb-register-theme((
   card-header-with-select-padding-top: 0.5rem,
   card-header-with-select-padding-bottom: 0.5rem,
 
+  img-revert: invert(0%),
+
   select-min-width: 6rem,
 
   slide-out-background: linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
@@ -79,6 +85,8 @@ $nb-themes: nb-register-theme((
   card-margin-bottom: 1.875rem,
   card-header-with-select-padding-top: 0.5rem,
   card-header-with-select-padding-bottom: 0.5rem,
+
+  img-revert: invert(100%),
 
   select-min-width: 6rem,
 
