tock-admin : Move dialog logs link into highlight component
Signed-off-by: Erwan LE BESCOND <elebescond@gmail.com>

--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
@@ -27,6 +27,16 @@
 .highlight-text {
 }
 
+.highlight-block .control-item {
+  max-width: 3rem;
+  padding-right: 1rem;
+}
+
+/* HACK Waiting sass + theme nebular on Tock component */
+.highlight-block a.control-item {
+  color: #000;
+}
+
 .tokens {
   width: 100%;
 }
