--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -22,10 +22,12 @@
   <nb-card-header>Execute XRay plan</nb-card-header>
   <nb-card-body>
     <tock-select-bot [configurationId]="xrayBotConfigurationId"
+                     [returnsRestConfiguration]="true"
                      (selectionChange)="changeBotConfiguration($event)"
                      [allowNoSelection]="true"></tock-select-bot>
 
     <input nbInput
+           status="primary"
            class="input-text"
            placeholder="JIRA Test Plan"
            [(ngModel)]="xray.testPlanKey"
@@ -49,21 +51,15 @@
     </nb-actions>
   </nb-card-header>
   <nb-card-body style="background: #dadfe638;">
-    <div *ngIf="testPlanCreation" style="display: flex">
-      <input nbInput class="input-text"
-             placeholder="Test Plan name" status="primary"
+    <div *ngIf="testPlanCreation" class="new-plan">
+      <input nbInput placeholder="Test Plan name" status="primary" class="input-new-plan"
              [(ngModel)]="testPlanName"
              (keyup.enter)="createTestPlan()">
-      <nb-select placeholder="Select a bot" outline status="primary"
-                 [(ngModel)]="testBotConfigurationId">
-        <nb-option *ngFor="let conf of (botConfiguration.restConfigurations|async)"
-                   [value]="conf._id">{{ conf.name }}
-        </nb-option>
-      </nb-select>
+      <tock-select-bot [(configurationId)]="testBotConfigurationId" [returnsRestConfiguration]="true"></tock-select-bot>
 
       <nb-actions size="tiny" style="cursor: pointer;">
         <nb-action class="control-item" (click)="createTestPlan()"
-                   nbTooltip="Create">
+                   nbTooltip="Create" class="create">
           <i class="material-icons tock-toolbar-menu">check_circle</i>
         </nb-action>
         <nb-action class="control-item" (click)="resetCreateTestPlan()"
