--- a/bot/admin/web/src/app/bot/feature/feature.component.html
+++ b/bot/admin/web/src/app/bot/feature/feature.component.html
@@ -14,46 +14,5 @@
   ~ limitations under the License.
   -->
 
-<nb-card class="features">
-  <nb-card-header  style="display: flex;">
-    Features
-    <nb-actions size="small" style="cursor: pointer;">
-        <nb-action class="control-item" nbTooltip="Refresh" (click)="refresh()" *ngIf="!create">
-          <i class="material-icons tock-toolbar-menu">refresh</i>
-        </nb-action>
-        <nb-action class="control-item" nbTooltip="Add a new Feature" (click)="prepareCreate()" *ngIf="!create">
-            <i class="material-icons tock-toolbar-menu">add_box</i>
-          </nb-action>
-    </nb-actions>
-  </nb-card-header>
-  <nb-card-body>
-    <div *ngIf="create">
-      <mat-form-field>
-        <input matInput placeholder="Category" [(ngModel)]="feature.category">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Name" [(ngModel)]="feature.name">
-      </mat-form-field>
-      <mat-slide-toggle color="primary" [checked]="feature.enabled" (change)="toggleNew()">Status</mat-slide-toggle>
-    </div>
-
-    <div *ngIf="!create">
-      <div *ngFor="let f of features" class="feature">
-        <span class="category">{{f.category}}</span>
-        <span class="name">{{f.name}}</span>
-        <span class="toggle">
-          <mat-slide-toggle color="primary" [checked]="f.enabled" (change)="toggle(f)">Status</mat-slide-toggle>
-        </span>
-        <span>
-          <button mat-button (click)="deleteFeature(f)" nbTooltip="Delete" color="warn">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </span>
-      </div>
-    </div>
-  </nb-card-body>
-  <nb-card-footer *ngIf="create">
-    <button nbButton size="small" status="danger" (click)="cancelCreate()">Cancel</button>
-    <button nbButton size="small" status="primary" style="margin-left: 20px" (click)="addFeature()">Add</button>
-  </nb-card-footer>
-</nb-card>
+<tock-story-rule></tock-story-rule>
+<tock-application-feature></tock-application-feature>
