resolves #605 bot admin: add targetApp id for rest connectors
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -35,12 +35,11 @@
     <mat-select
       placeholder="Connector type"
       [(ngModel)]="configuration.connectorType"
-      (selectionChange)="changeConnectorType()"
-      #type>
+      (selectionChange)="changeConnectorType()">
       <mat-select-trigger>
-            <span *ngIf="type.value" class="connector">
-              <img src="{{type.value.iconUrl()}}" class="connector-icon"
-                   [matTooltip]="type.value.label()"/> {{ type.value.label() }}
+            <span *ngIf="configuration.connectorType" class="connector">
+              <img src="{{configuration.connectorType.iconUrl()}}" class="connector-icon"
+                   [matTooltip]="configuration.connectorType.label()"/> {{ configuration.connectorType.label() }}
             </span>
       </mat-select-trigger>
       <mat-option *ngFor="let c of connectorTypesAndRestType"
