Fix #608 should display sthg when no intent
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -20,6 +20,11 @@
     intent category is expanded by default.
   </nb-card-header>
   <nb-card-body>
+    <div *ngIf="!treeControl || treeControl.dataNodes.length == 0">
+      <h4 class="title">No Intent found</h4>
+      <p>To create Intents, start from <em>Try it</em> or <em>New Story</em> in Tock Studio,
+        or the <em>API</em>.</p>
+    </div>
     <mat-tree [treeControl]="treeControl" [dataSource]="intentsCategories">
       <mat-tree-node *matTreeNodeDef="let node" class="tree" [class.tree-open]="treeControl.isExpanded(node)">
         <button mat-icon-button matTreeNodeToggle
